k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: postgres-deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
      # req persistent volume
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim
          
      containers:
        - name: postgres
          image: postgres # needs env var
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage # same as volume name
              mountPath: /var/lib/postgresql/data # default path of postgres storage
              # only for postgresOne
              subPath: postgres # root folder (subfolder)
          # overring the default password
